--- a/index.html
+++ b/index.html
@@ -6,5 +6,80 @@
 </head>
 <body>
   <!-- Your content will go here -->
+
+  <!-- Text Elements -->
+
+  <h1>ICS 343</h1>
+  <h2>Fundamentals of Computer Networks</h2>
+  <h3>A course where we will learn the introduction to computer networks and layered architectures.</h3>
+
+
+  <!-- Different text formatting -->
+  <h3>This is a <strong>computer</strong> course, for <mark><em>CS and SWE</em></mark> students.</h3>
+
+  <p><br></p>
+
+  <!-- Lists -->
+  <h2>Networking Information</h2>
+  <ul>
+      <li>Devices
+          <ul>
+              <li>Router</li>
+              <li>Switch</li>
+              <li>Firewall</li>
+          </ul>
+      </li>
+      <li>Protocols
+          <ul>
+              <li>DNS</li>
+              <li>TCP</li>
+              <li>UDP</li>
+          </ul>
+      </li>
+  </ul>
+
+  <p><br></p>
+
+  <!-- Tables -->
+  <h3>Student Grades:</h3>
+  <table border="1">
+      <thead>
+      <tr>
+          <th>Student Name</th>
+          <th>Assignment 1</th>
+          <th>Assignment 2</th>
+          <th>Final Grade</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+          <td>Aleen</td>
+          <td>100</td>
+          <td>100</td>
+          <td>A+</td>
+      </tr>
+      <tr>
+          <td>Khawla</td>
+          <td>100</td>
+          <td>100</td>
+          <td>A+</td>
+      </tr>
+      </tbody>
+  </table>
+
+  <p><br></p>
+
+  <!-- Images -->
+  <h3>ICS343:</h3>
+  <img src="img/5321845.png" alt="Networks" width="200" height="200">
+
+  <p><br></p>
+  <p><br></p>
+
+  <!-- Images -->
+  <h3>KFUPM Logo:</h3>
+  <img src="img/kfupm.svg" alt="KFUPM Logo" width="200" height="200">
+
+
 </body>
 </html>
